# drf-pastebin

./: .gitignore  Dockerfile  docker-compose.yml
src/: pyproject.toml
src/snippets/: models.py  serializers.py  views.py
src/snippets/migrations/: 0001_initial.py
src/tutorial/: settings.py  urls.py
