[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
black = "^23.11.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.13"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
